   "no_media_path" option.
   Returns "0" if there is a B channel associated with the call.
   Returns "1" if no B channel is associated with the call.  The call is either
   on hold or is a call waiting call.
 * Added option to dialplan function CDR(), the 'f' option
   allows for high resolution times for billsec and duration fields.
 * FILE() now supports line-mode and writing.

Dialplan Variables
------------------
 * Added DYNAMIC_FEATURENAME which holds the last triggered dynamic feature.
 * Added DYNAMIC_PEERNAME which holds the unique channel name on the other side
   and is set when a dynamic feature is triggered.
 * Added PARKINGLOT which can be used with parkeddynamic feature.conf option
   to dynamically create a new parking lot matching the value this varible is
   set to.
 * Added PARKINGDYNAMIC which represents the template parkinglot defined in
   features.conf that should be the base for dynamic parkinglots.
 * Added PARKINGDYNCONTEXT which tells what context a newly created dynamic
   parkinglot should have.
 * Added PARKINGDYNPOS which holds what parking positions a dynamic parkinglot
   should have.

Queue changes
-------------
 * Added "ready" option to QUEUE_MEMBER counting to count free agents whose wrap-up
   timeout has expired.
 * Added 'R' option to app_queue.  This option stops moh and indicates ringing
   to the caller when an Agent's phone is ringing.  This can be used to indicate
   to the caller that their call is about to be picked up, which is nice when
   one has been on hold for an extened period of time.
 * A new config option, penaltymemberslimit, has been added to queues.conf.
   When set this option will disregard penalty settings when a queue has too
   few members.
 * A new option, 'I' has been added to both app_queue and app_dial.
   By setting this option, Asterisk will not update the caller with
   connected line changes or redirecting party changes when they occur.